# nx

./: CLAUDE.md  PLANNING.md  README.md  TASK.md  justfile  pyproject.toml  spec.md
.claude/: settings.json
backlog/: container-transport.md
src/nx/: __init__.py  cli.py  config.py  dashboard.py  nodes.py  resolve.py  snapshot.py  ssh.py  tmux.py
src/nx/data/: tmux.conf
tests/: conftest.py  test_cli_attach.py  test_cli_gc.py  test_cli_list.py  test_cli_new.py  test_cli_peek_logs.py  test_cli_send_kill.py  test_config.py  test_dashboard.py  test_nodes.py  test_resolve.py  test_snapshot.py  test_transport.py
tests/integration/: conftest.py  test_local_workflow.py
